<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_monster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wilder.app_wcs_se_monster_project.CreateMonsterActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/add_monster_name"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:ems="10"
        android:id="@+id/add_monster_name_edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:text="@string/save_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_monster_name_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/save_name_button"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/activity_vertical_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:id="@+id/buttons_layout">

        <TextView
            android:text="@string/chose_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_vertical_margin"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/nature"
            android:id="@+id/nature_image_button"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/water_image_button"
            android:layout_alignLeft="@+id/water_image_button"
            android:layout_alignStart="@+id/water_image_button"
            android:layout_marginTop="86dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/special"
            android:id="@+id/special_image_button"
            android:background="@color/colorPrimary"
            android:layout_alignTop="@+id/water_image_button"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/metal"
            android:id="@+id/metal_image_button"
            android:background="@color/colorPrimary"
            android:layout_alignTop="@+id/nature_image_button"
            android:layout_alignRight="@+id/special_image_button"
            android:layout_alignEnd="@+id/special_image_button" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/feu"
            android:id="@+id/fire_image_button"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/foudre"
            android:id="@+id/foudre_image_button"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mort"
            android:id="@+id/death_image_button"
            android:background="@color/colorPrimary"
            android:layout_alignTop="@+id/nature_image_button"
            android:layout_alignLeft="@+id/foudre_image_button"
            android:layout_alignStart="@+id/foudre_image_button" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/magie"
            android:id="@+id/magic_image_button"
            android:background="@color/colorPrimary"
            android:layout_alignTop="@+id/water_image_button"
            android:layout_alignLeft="@+id/foudre_image_button"
            android:layout_alignStart="@+id/foudre_image_button" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/lumiere"
            android:id="@+id/light_image_button"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/eau"
            android:id="@+id/water_image_button"
            android:layout_marginTop="73dp"
            android:layout_below="@+id/light_image_button"
            android:layout_alignRight="@+id/light_image_button"
            android:layout_alignEnd="@+id/light_image_button" />

    </RelativeLayout>



</RelativeLayout>
