<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_monster__page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wilder.app_wcs_se_monster_project.Monster_Page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_image"
            app:srcCompat="@drawable/eau"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_text"
            android:textColor="@color/textColor"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/relativeLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/back_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/back_menu_button"
            android:layout_above="@+id/back_collection_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/back_list_button"
            android:id="@+id/back_collection_button"
            android:layout_marginBottom="11dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/suppress_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suppress_button"
            android:background="@color/colorPrimaryDark"
            android:layout_above="@+id/back_menu_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:id="@+id/stat_power_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/stat_power"
            android:layout_above="@+id/stat_speed_img"
            android:layout_alignLeft="@+id/stat_speed_img"
            android:layout_alignStart="@+id/stat_speed_img" />

        <ImageView
        android:id="@+id/stat_stamina_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stat_stamina"
            android:layout_marginBottom="16dp"
            android:layout_above="@+id/suppress_button"
            android:layout_alignLeft="@+id/suppress_button"
            android:layout_alignStart="@+id/suppress_button" />

        <ImageView
            android:id="@+id/stat_life_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/stat_life"
            android:layout_above="@+id/stat_power_img"
            android:layout_alignLeft="@+id/stat_power_img"
            android:layout_alignStart="@+id/stat_power_img" />

        <TextView
        android:id="@+id/stat_life_text"
        android:text=""
        android:layout_width="150dp"
        android:textAlignment="center"
        android:textSize="@dimen/monster_name"
        android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_above="@+id/stat_power_img"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/stat_speed_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/stat_speed"
            android:layout_above="@+id/stat_stamina_img"
            android:layout_alignLeft="@+id/stat_stamina_img"
            android:layout_alignStart="@+id/stat_stamina_img" />

        <TextView
            android:id="@+id/stat_speed_text"
            android:text=""
            android:layout_width="150dp"
            android:textAlignment="center"
            android:textSize="@dimen/monster_name"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_above="@+id/stat_stamina_img"
            android:layout_alignLeft="@+id/stat_life_text"
            android:layout_alignStart="@+id/stat_life_text" />

        <TextView
            android:id="@+id/stat_stamina_text"
            android:text=""
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="@dimen/monster_name"
            android:layout_alignBottom="@+id/stat_stamina_img"
            android:layout_alignLeft="@+id/stat_speed_text"
            android:layout_alignStart="@+id/stat_speed_text" />

        <TextView
            android:id="@+id/stat_power_text"
            android:text=""
            android:layout_width="150dp"
            android:textAlignment="center"
            android:textSize="@dimen/monster_name"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_above="@+id/stat_speed_img"
            android:layout_alignLeft="@+id/stat_life_text"
            android:layout_alignStart="@+id/stat_life_text" />


    </RelativeLayout>
</RelativeLayout>
